--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         the city through the pandemic, I have attempted to recreate a picture
         through data of some of the weird little ways our lives changed.
       </p>
-      <h2>What went up?</h2>
-      <h3>Noise Complaints</h3>
+      <h2>Which Complaints Went Up?</h2>
+      <h3>Noise</h3>
       <p>[TK - paragraph about noise complaints]</p>
     </div>
     <div class="graphics-container">
@@ -172,14 +172,6 @@
         <img src="charts-up/35.svg" />
       </div>
       <div class="single-graphic">
-        <p>Missed Pickup - All</p>
-        <img src="charts-up/47.svg" />
-      </div>
-      <div class="single-graphic">
-        <p>Helicopter Noise</p>
-        <img src="charts-up/51.svg" />
-      </div>
-      <div class="single-graphic">
         <p>Engine Idling</p>
         <img src="charts-up/71.svg" />
       </div>
@@ -192,36 +184,12 @@
         <img src="charts-up/121.svg" />
       </div>
       <div class="single-graphic">
-        <p>Liter - Public Facility</p>
-        <img src="charts-up/151.svg" />
-      </div>
-      <div class="single-graphic">
-        <p>Trespassing</p>
-        <img src="charts-up/176.svg" />
-      </div>
-      <div class="single-graphic">
-        <p>Missed Pickup - Recycling</p>
-        <img src="charts-up/191.svg" />
-      </div>
-      <div class="single-graphic">
         <p>Ice Cream Truck</p>
         <img src="charts-up/237.svg" />
       </div>
       <div class="single-graphic">
-        <p>Drinking</p>
-        <img src="charts-up/255.svg" />
-      </div>
-      <div class="single-graphic">
         <p>Music From Vehicle - Business</p>
         <img src="charts-up/261.svg" />
-      </div>
-      <div class="single-graphic">
-        <p>Overflowing Cans</p>
-        <img src="charts-up/277.svg" />
-      </div>
-      <div class="single-graphic">
-        <p>Dogs</p>
-        <img src="charts-up/294.svg" />
       </div>
       <div class="single-graphic">
         <p>Music/Party - House of Worship</p>
@@ -232,17 +200,59 @@
         <img src="charts-up/363.svg" />
       </div>
       <div class="single-graphic">
-        <p>Bare Hands</p>
-        <img src="charts-up/381.svg" />
-      </div>
-      <div class="single-graphic">
         <p>Lawn Care Equipment</p>
         <img src="charts-up/433.svg" />
       </div>
     </div>
+
     <div class="content">
-      <h2>What Went Down?</h2>
-      <h3>Construction</h3>
+      <h3>Trash</h3>
+      <p>[TK - paragraph about trash]</p>
+    </div>
+    <div class="graphics-container">
+      <div class="single-graphic">
+        <p>Missed Pickup - All</p>
+        <img src="charts-up/47.svg" />
+      </div>
+      <div class="single-graphic">
+        <p>Liter - Public Facility</p>
+        <img src="charts-up/151.svg" />
+      </div>
+      <div class="single-graphic">
+        <p>Missed Pickup - Recycling</p>
+        <img src="charts-up/191.svg" />
+      </div>
+      <div class="single-graphic">
+        <p>Overflowing Cans</p>
+        <img src="charts-up/277.svg" />
+      </div>
+    </div>
+
+    <div class="content">
+      <h3>Drinking in Public</h3>
+      <p>[TK - paragraph about drinking in public]</p>
+    </div>
+    <div class="graphics-container">
+      <div class="single-graphic">
+        <p>Drinking</p>
+        <img src="charts-up/255.svg" />
+      </div>
+    </div>
+
+    <div class="content">
+      <h3>Food Worries</h3>
+      <p>[TK - paragraph about bare hands]</p>
+    </div>
+    <div class="graphics-container">
+      <div class="single-graphic">
+        <p>Bare Hands</p>
+        <img src="charts-up/381.svg" />
+      </div>
+    </div>
+
+    <div class="content">
+      <h2>Which Complaints Went Down?</h2>
+      <h3>Car Related Woes</h3>
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
@@ -259,10 +269,6 @@
       </div>
       <div class="single-graphic">
         <p></p>
-        <img src="charts-down/12.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
         <img src="charts-down/14.svg" />
       </div>
       <div class="single-graphic">
@@ -275,23 +281,11 @@
       </div>
       <div class="single-graphic">
         <p></p>
-        <img src="charts-down/19.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
         <img src="charts-down/21.svg" />
       </div>
       <div class="single-graphic">
         <p></p>
-        <img src="charts-down/28.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
         <img src="charts-down/45.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
-        <img src="charts-down/52.svg" />
       </div>
       <div class="single-graphic">
         <p></p>
@@ -303,31 +297,57 @@
       </div>
       <div class="single-graphic">
         <p></p>
-        <img src="charts-down/76.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
-        <img src="charts-down/79.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
-        <img src="charts-down/106.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
-        <img src="charts-down/109.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
-        <img src="charts-down/120.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
         <img src="charts-down/124.svg" />
       </div>
       <div class="single-graphic">
         <p></p>
-        <img src="charts-down/131.svg" />
+        <img src="charts-down/168.svg" />
+      </div>
+      <div class="single-graphic">
+        <p></p>
+        <img src="charts-down/169.svg" />
+      </div>
+      <div class="single-graphic">
+        <p></p>
+        <img src="charts-down/188.svg" />
+      </div>
+      <div class="single-graphic">
+        <p></p>
+        <img src="charts-down/203.svg" />
+      </div>
+      <div class="single-graphic">
+        <p></p>
+        <img src="charts-down/225.svg" />
+      </div>
+      <div class="single-graphic">
+        <p></p>
+        <img src="charts-down/321.svg" />
+      </div>
+      <div class="single-graphic">
+        <p></p>
+        <img src="charts-down/369.svg" />
+      </div>
+      <div class="single-graphic">
+        <p></p>
+        <img src="charts-down/389.svg" />
+      </div>
+    </div>
+
+    <div class="content">
+      <h3>Construction Related Woes</h3>
+      <p>
+        Its unsurprising, people put off non-critical repairs so as not to have
+        service teams enter their home.
+      </p>
+    </div>
+    <div class="graphics-container">
+      <div class="single-graphic">
+        <p></p>
+        <img src="charts-down/19.svg" />
+      </div>
+      <div class="single-graphic">
+        <p></p>
+        <img src="charts-down/109.svg" />
       </div>
       <div class="single-graphic">
         <p></p>
@@ -343,43 +363,11 @@
       </div>
       <div class="single-graphic">
         <p></p>
-        <img src="charts-down/168.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
-        <img src="charts-down/169.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
-        <img src="charts-down/171.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
-        <img src="charts-down/177.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
-        <img src="charts-down/188.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
         <img src="charts-down/198.svg" />
       </div>
       <div class="single-graphic">
         <p></p>
-        <img src="charts-down/203.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
-        <img src="charts-down/224.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
-        <img src="charts-down/225.svg" />
-      </div>
-      <div class="single-graphic">
-        <p></p>
-        <img src="charts-down/242.svg" />
+        <img src="charts-down/401.svg" />
       </div>
       <div class="single-graphic">
         <p></p>
@@ -393,25 +381,57 @@
         <p></p>
         <img src="charts-down/266.svg" />
       </div>
+    </div>
+
+    <div class="content">
+      <h3>Street Gripes</h3>
+      <p>
+        With nobody out and about, there were fewer people calling in
+        complaints.
+      </p>
+    </div>
+    <div class="graphics-container">
       <div class="single-graphic">
         <p></p>
-        <img src="charts-down/321.svg" />
+        <img src="charts-down/52.svg" />
       </div>
       <div class="single-graphic">
         <p></p>
-        <img src="charts-down/356.svg" />
+        <img src="charts-down/76.svg" />
       </div>
       <div class="single-graphic">
         <p></p>
-        <img src="charts-down/369.svg" />
+        <img src="charts-down/106.svg" />
       </div>
       <div class="single-graphic">
         <p></p>
-        <img src="charts-down/389.svg" />
+        <img src="charts-down/120.svg" />
       </div>
       <div class="single-graphic">
         <p></p>
-        <img src="charts-down/401.svg" />
+        <img src="charts-down/131.svg" />
+      </div>
+      <div class="single-graphic">
+        <p></p>
+        <img src="charts-down/177.svg" />
+      </div>
+      <div class="single-graphic">
+        <p></p>
+        <img src="charts-down/242.svg" />
+      </div>
+    </div>
+
+    <div class="content">
+      <h3>Bad Food</h3>
+    </div>
+    <div class="graphics-container">
+      <div class="single-graphic">
+        <p></p>
+        <img src="charts-down/171.svg" />
+      </div>
+      <div class="single-graphic">
+        <p></p>
+        <img src="charts-down/454.svg" />
       </div>
       <div class="single-graphic">
         <p></p>
@@ -419,23 +439,54 @@
       </div>
       <div class="single-graphic">
         <p></p>
-        <img src="charts-down/441.svg" />
+        <img src="charts-down/356.svg" />
+      </div>
+    </div>
+
+    <div class="content">
+      <h3>Side Hustles</h3>
+    </div>
+    <div class="graphics-container">
+      <div class="single-graphic">
+        <p></p>
+        <img src="charts-down/28.svg" />
       </div>
       <div class="single-graphic">
         <p></p>
-        <img src="charts-down/454.svg" />
+        <img src="charts-down/224.svg" />
       </div>
     </div>
+
     <div class="content">
-      <h2>What Emerged?</h2>
+      <h2>Which Complaints Emerged?</h2>
       <h3>Drag Racing</h3>
-      <div class="graphics-container">
-        <div class="single-graphic">
-          <img src="charts-up/374.svg" />
-        </div>
+      <p>TK- paragraph about drag racing</p>
+    </div>
+    <div class="graphics-container">
+      <div class="single-graphic">
+        <img src="charts-up/374.svg" />
       </div>
     </div>
-    <div class="graphics-container"></div>
+
+    <div class="content">
+      <h3>Helicopter Noise</h3>
+      <p>Paragraph about Helicopter Noise</p>
+    </div>
+    <div class="graphics-container">
+      <div class="single-graphic">
+        <img src="charts-up/51.svg" />
+      </div>
+    </div>
+
+    <div class="content">
+      <h3>Dogs Off Leash</h3>
+    </div>
+    <div class="graphics-container">
+      <div class="single-graphic">
+        <p>Dogs</p>
+        <img src="charts-up/294.svg" />
+      </div>
+    </div>
 
     <div class="footer">
       <div class="content">
