--- a/index.html
+++ b/index.html
@@ -152,55 +152,42 @@
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
-        <p>Music/Party - Residence</p>
         <img src="charts-up/0.svg" />
       </div>
       <div class="single-graphic">
-        <p>Music/Party - Sidewalk</p>
         <img src="charts-up/4.svg" />
       </div>
       <div class="single-graphic">
-        <p>Music From Vehicle</p>
         <img src="charts-up/18.svg" />
       </div>
       <div class="single-graphic">
-        <p>Loud Talking - Sidewalk</p>
         <img src="charts-up/23.svg" />
       </div>
       <div class="single-graphic">
-        <p>Loud Talking - Residence</p>
         <img src="charts-up/35.svg" />
       </div>
       <div class="single-graphic">
-        <p>Engine Idling</p>
         <img src="charts-up/71.svg" />
       </div>
       <div class="single-graphic">
-        <p>Music/Party - Park</p>
         <img src="charts-up/118.svg" />
       </div>
       <div class="single-graphic">
-        <p>Loud Television</p>
         <img src="charts-up/121.svg" />
       </div>
       <div class="single-graphic">
-        <p>Ice Cream Truck</p>
         <img src="charts-up/237.svg" />
       </div>
       <div class="single-graphic">
-        <p>Music From Vehicle - Business</p>
         <img src="charts-up/261.svg" />
       </div>
       <div class="single-graphic">
-        <p>Music/Party - House of Worship</p>
         <img src="charts-up/351.svg" />
       </div>
       <div class="single-graphic">
-        <p>Horns Honkings</p>
         <img src="charts-up/363.svg" />
       </div>
       <div class="single-graphic">
-        <p>Lawn Care Equipment</p>
         <img src="charts-up/433.svg" />
       </div>
     </div>
@@ -211,19 +198,15 @@
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
-        <p>Missed Pickup - All</p>
         <img src="charts-up/47.svg" />
       </div>
       <div class="single-graphic">
-        <p>Liter - Public Facility</p>
         <img src="charts-up/151.svg" />
       </div>
       <div class="single-graphic">
-        <p>Missed Pickup - Recycling</p>
         <img src="charts-up/191.svg" />
       </div>
       <div class="single-graphic">
-        <p>Overflowing Cans</p>
         <img src="charts-up/277.svg" />
       </div>
     </div>
@@ -234,7 +217,6 @@
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
-        <p>Drinking</p>
         <img src="charts-up/255.svg" />
       </div>
     </div>
@@ -245,7 +227,6 @@
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
-        <p>Bare Hands</p>
         <img src="charts-up/381.svg" />
       </div>
     </div>
@@ -256,79 +237,60 @@
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/2.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/10.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/11.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/14.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/15.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/16.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/21.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/45.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/68.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/75.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/124.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/168.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/169.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/188.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/203.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/225.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/321.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/369.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/389.svg" />
       </div>
     </div>
@@ -342,43 +304,33 @@
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/19.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/109.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/139.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/146.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/166.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/198.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/401.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/258.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/259.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/266.svg" />
       </div>
     </div>
@@ -392,31 +344,24 @@
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/52.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/76.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/106.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/120.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/131.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/177.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/242.svg" />
       </div>
     </div>
@@ -426,19 +371,15 @@
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/171.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/454.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/406.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/356.svg" />
       </div>
     </div>
@@ -448,17 +389,15 @@
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/28.svg" />
       </div>
       <div class="single-graphic">
-        <p></p>
         <img src="charts-down/224.svg" />
       </div>
     </div>
 
     <div class="content">
-      <h2>Which Complaints Emerged?</h2>
+      <h2>Which New Complaints Emerged?</h2>
       <h3>Drag Racing</h3>
       <p>TK- paragraph about drag racing</p>
     </div>
@@ -492,7 +431,7 @@
       <div class="content">
         <p>
           You can find the code for this project
-          <a href="https://github.com/jsoma/page-templates/blob/main/story.html"
+          <a href="https://github.com/mjdanbury/pandemic-changes-311/tree/main"
             >here</a
           >.
         </p>
