--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         max-width: 900;
         margin: auto;
         display: flex;
-        justify-content: space-around;
+        /* justify-content: space-around; */
+        justify-content: center;
         flex-wrap: wrap;
       }
       .single-graphic {
@@ -148,7 +149,7 @@
       </p>
       <h2>Which Complaints Went Up?</h2>
       <h3>Noise</h3>
-      <p>[TK - paragraph about noise complaints]</p>
+      <!-- <p>[TK - paragraph about noise complaints]</p> -->
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
@@ -194,7 +195,7 @@
 
     <div class="content">
       <h3>Trash</h3>
-      <p>[TK - paragraph about trash]</p>
+      <!-- <p>[TK - paragraph about trash]</p> -->
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
@@ -213,7 +214,7 @@
 
     <div class="content">
       <h3>Drinking in Public</h3>
-      <p>[TK - paragraph about drinking in public]</p>
+      <!-- <p>[TK - paragraph about drinking in public]</p> -->
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
@@ -223,7 +224,7 @@
 
     <div class="content">
       <h3>Food Worries</h3>
-      <p>[TK - paragraph about bare hands]</p>
+      <!-- <p>[TK - paragraph about bare hands]</p> -->
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
@@ -297,10 +298,10 @@
 
     <div class="content">
       <h3>Construction Related Woes</h3>
-      <p>
+      <!-- <p>
         Its unsurprising, people put off non-critical repairs so as not to have
         service teams enter their home.
-      </p>
+      </p> -->
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
@@ -337,10 +338,10 @@
 
     <div class="content">
       <h3>Street Gripes</h3>
-      <p>
+      <!-- <p>
         With nobody out and about, there were fewer people calling in
         complaints.
-      </p>
+      </p> -->
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
@@ -399,7 +400,7 @@
     <div class="content">
       <h2>Which New Complaints Emerged?</h2>
       <h3>Drag Racing</h3>
-      <p>TK- paragraph about drag racing</p>
+      <!-- <p>TK- paragraph about drag racing</p> -->
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
@@ -409,7 +410,7 @@
 
     <div class="content">
       <h3>Helicopter Noise</h3>
-      <p>Paragraph about Helicopter Noise</p>
+      <!-- <p>Paragraph about Helicopter Noise</p> -->
     </div>
     <div class="graphics-container">
       <div class="single-graphic">
